--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,15 @@
 sonar.projectKey=danreut89_jiraTest
 sonar.organization=danreut89
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=jiraTest
-#sonar.projectVersion=1.0
+# Set Python version for accurate analysis
+sonar.python.version=3.9  # Change this to match your Python version
 
+# Ensure Python files are included in the analysis
+sonar.sources=.
+sonar.inclusions=**/*.py
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Enable SCM tracking
+sonar.scm.provider=git
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Ensure duplicate detection
+sonar.cpd.exclusions=
